Working on order creation from installment